[gd_scene load_steps=20 format=3 uid="uid://d33dftgewpw1f"]

[ext_resource type="Script" uid="uid://xbmh7t7e7kn6" path="res://main/UI/menu/menu.gd" id="1_37ek2"]
[ext_resource type="Texture2D" uid="uid://7i5dpbv6mww3" path="res://main/UI/menu/menu.tres" id="2_hnf3l"]
[ext_resource type="Texture2D" uid="uid://bspdfof1ikrcx" path="res://main/UI/menu/menu2.tres" id="3_3impa"]
[ext_resource type="Texture2D" uid="uid://c612hmmfvfgsr" path="res://exported_frames/frame_0.png" id="4_3impa"]
[ext_resource type="Texture2D" uid="uid://d2emva0cnrmq7" path="res://exported_frames/frame_1.png" id="5_f2nar"]
[ext_resource type="Texture2D" uid="uid://ba27b8uwwvimy" path="res://exported_frames/frame_2.png" id="6_lqput"]
[ext_resource type="Texture2D" uid="uid://cdn48s0vkrp3u" path="res://exported_frames/frame_3.png" id="7_vjywk"]
[ext_resource type="Texture2D" uid="uid://c6e654nbvsc64" path="res://exported_frames/frame_4.png" id="8_nm8qa"]
[ext_resource type="Texture2D" uid="uid://br6nmnbx07ns1" path="res://exported_frames/frame_5.png" id="9_m21rw"]
[ext_resource type="Texture2D" uid="uid://dgjklvdytmq8t" path="res://assets/textures/effects/fire/Red Effect Bullet Impact Explosion 32x32.png" id="10_lqput"]
[ext_resource type="PackedScene" uid="uid://b3fc1acjxjhk8" path="res://main/globals/SoundManager.tscn" id="12_vjywk"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_hnf3l"]
frames = 6
speed_scale = 10.0
frame_0/texture = ExtResource("4_3impa")
frame_1/texture = ExtResource("5_f2nar")
frame_1/duration = 1.0
frame_2/texture = ExtResource("6_lqput")
frame_2/duration = 1.0
frame_3/texture = ExtResource("7_vjywk")
frame_3/duration = 1.0
frame_4/texture = ExtResource("8_nm8qa")
frame_4/duration = 1.0
frame_5/texture = ExtResource("9_m21rw")
frame_5/duration = 1.0

[sub_resource type="InputEventAction" id="InputEventAction_37ek2"]
action = &"ui_accept"

[sub_resource type="Shortcut" id="Shortcut_hnf3l"]
events = [SubResource("InputEventAction_37ek2")]

[sub_resource type="AtlasTexture" id="AtlasTexture_vjywk"]
atlas = ExtResource("10_lqput")
region = Rect2(352, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nm8qa"]
atlas = ExtResource("10_lqput")
region = Rect2(384, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m21rw"]
atlas = ExtResource("10_lqput")
region = Rect2(416, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5n0v"]
atlas = ExtResource("10_lqput")
region = Rect2(448, 384, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_umb64"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjywk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nm8qa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m21rw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5n0v")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="Control" type="Control"]
texture_filter = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_37ek2")
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_hnf3l")
metadata/_edit_lock_ = true

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_3impa")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = SubResource("AnimatedTexture_hnf3l")
expand_mode = 2
stretch_mode = 5

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
z_index = 3
layout_mode = 2

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer2"]
z_index = 1
texture_filter = 3
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 10
shortcut = SubResource("Shortcut_hnf3l")
text = "S T A R T"
flat = true

[node name="Credits" type="Button" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
text = "C R E D I T S"
flat = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="MarginContainer"]
texture_filter = 3
position = Vector2(632, 576.00006)
scale = Vector2(13.250001, 8.999998)
sprite_frames = SubResource("SpriteFrames_umb64")

[node name="SoundManager" parent="." instance=ExtResource("12_vjywk")]

[connection signal="pressed" from="MarginContainer/VBoxContainer2/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/Credits" to="." method="_on_credits_pressed"]
